Don't crash if an image is deleted whilst annotating multiple images

BUG: 483266