AnnotationDialog/ImagePreview.cpp
@@ -1,5 +1,5 @@
 // SPDX-FileCopyrightText: 2003-2020 Jesper K. Pedersen <blackie@kde.org>
-// SPDX-FileCopyrightText: 2022 Johannes Zarl-Zierl <johannes@zarl-zierl.at>
+// SPDX-FileCopyrightText: 2022-2024 Johannes Zarl-Zierl <johannes@zarl-zierl.at>
 //
 // SPDX-License-Identifier: GPL-2.0-or-later
 
@@ -561,6 +561,11 @@ float ImagePreview::distance(QPoint point1, QPoint point2)
 {
     QPoint difference = point1 - point2;
     return sqrt(pow(difference.x(), 2) + pow(difference.y(), 2));
+}
+
+const DB::ImageInfo &ImagePreview::currentInfo() const
+{
+    return m_info;
 }
 
 // vi:expandtab:tabstop=4 shiftwidth=4:
