AnnotationDialog/ImagePreview.h
@@ -1,5 +1,5 @@
 // SPDX-FileCopyrightText: 2003-2010 Jesper K. Pedersen <blackie@kde.org>
-// SPDX-FileCopyrightText: 2022 Johannes Zarl-Zierl <johannes@zarl-zierl.at>
+// SPDX-FileCopyrightText: 2022-2024 Johannes Zarl-Zierl <johannes@zarl-zierl.at>
 //
 // SPDX-License-Identifier: GPL-2.0-or-later
 
@@ -37,6 +37,7 @@ public:
     QSize getActualImageSize();
     void acceptProposedTag(QPair<QString, QString> tagData, ResizableFrame *area);
     QPixmap grabAreaImage(QRect area);
+    const DB::ImageInfo &currentInfo() const;
 
 public Q_SLOTS:
     void setAreaCreationEnabled(bool state);
